tests/models/struct/named/unit/fail/gt.stderr
error: Support condition is alias, default
 --> tests/models/struct/named/unit/fail/gt.rs:5:5
  |
5 |     value: (),
  |     ^^^^^
